--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.22.0",
+        "webextension-polyfill": "^0.12.0",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.0"
