--- a/engines/chromium/manifest.json
+++ b/engines/chromium/manifest.json
@@ -1,6 +1,7 @@
 {
     "background": {
         "service_worker": "background.js",
-        "type": "module"
+        "type": "module",
+        "scripts": ["browser-polyfill.js"]
     }
 }
