--- a/engines/chromium/manifest.json
+++ b/engines/chromium/manifest.json
@@ -1,7 +1,6 @@
 {
     "background": {
         "service_worker": "background.js",
-        "type": "module",
-        "scripts": ["browser-polyfill.js"]
+        "type": "module"
     }
 }
