--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "devDependencies": {
         "@eslint/compat": "^1.2.6",
         "@eslint/js": "^9.19.0",
+        "@swc/core": "^1.11.24",
+        "@swc/jest": "^0.2.38",
         "@types/chrome": "^0.0.299",
         "@types/jest": "^29.5.14",
         "@types/react": "^19.0.8",
@@ -59,7 +61,6 @@
         "react-dom": "^19.0.0",
         "sinon": "^19.0.2",
         "sinon-chrome": "^3.0.1",
-        "ts-jest": "^29.2.5",
         "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
