--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/react-dom": "^19.0.3",
         "@types/sinon": "^17.0.3",
         "@types/sinon-chrome": "^2.2.15",
+        "@types/sql.js": "^1.4.9",
         "@types/webextension-polyfill": "^0.12.3",
         "@types/webpack": "^5.28.5",
         "@types/webpack-env": "^1.18.8",
@@ -61,13 +62,14 @@
         "react-dom": "^19.0.0",
         "sinon": "^19.0.2",
         "sinon-chrome": "^3.0.1",
+        "sql.js": "^1.13.0",
         "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.22.0",
         "webextension-polyfill": "^0.12.0",
-        "webpack": "^5.97.1",
+        "webpack": "^5.99.9",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.0"
     },
